<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/llLoginXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLoginXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvLoginXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textAlignment="center"
            android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginGoogleXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:text="@string/ingresar_google"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/btnLoginEmailXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_correo"
            app:icon="@drawable/ic_baseline_email_24" />

        <Button
            android:id="@+id/btnLoginAnonymousXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_anonimo"
            app:icon="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/tvLoginSignInXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/sin_cuenta"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>