<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uno"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/llLoginXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/cafe2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tvLoginXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textAlignment="center"
            android:textColor="@color/dos"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginGoogleXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:text="@string/ingresar_google"
            android:textColor="@color/uno"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginEmailXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_correo"
            android:textColor="@color/uno"
            android:textColorHighlight="@color/uno"
            android:textColorHint="@color/uno"
            android:textColorLink="@color/uno"
            android:textCursorDrawable="@color/uno"
            app:backgroundTint="@color/dos"
            app:icon="@drawable/ic_baseline_email_24"
            app:iconTint="@color/uno" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginAnonymousXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_anonimo"
            android:textColor="@color/uno"
            app:backgroundTint="@color/dos"
            app:icon="@drawable/ic_baseline_person_24"
            app:iconTint="@color/uno" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvLoginSignInXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/sin_cuenta"
            android:textAlignment="center"
            android:textColor="@color/dos"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>