<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uno"
    tools:context=".LoginEmail">

    <LinearLayout
        android:id="@+id/llLoginEmailXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/cafe2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tvLoginEmailXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textAlignment="center"
            android:textColor="@color/dos"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginEmailEmailXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:shadowColor="@color/dos"
            android:textColor="@color/dos"
            android:textColorHighlight="@color/dos"
            android:textColorHint="@color/dos"
            android:textColorLink="@color/dos"
            android:textCursorDrawable="@color/dos" />

        <EditText
            android:id="@+id/etLoginEmailPasswordXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/dos"
            android:textColorHighlight="@color/dos"
            android:textColorHint="@color/dos"
            android:textColorLink="@color/dos"
            android:textCursorDrawable="@color/dos" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginEmailLoginXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textColor="@color/uno"
            app:backgroundTint="@color/dos"
            app:icon="@drawable/ic_baseline_person_24"
            app:iconTint="@color/uno"
            app:iconTintMode="src_in" />

        <TextView
            android:id="@+id/tvLoginEmailSignInXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sin_cuenta"
            android:textAlignment="center"
            android:textColor="@color/dos"
            android:textColorHighlight="@color/dos"
            android:textColorHint="@color/dos"
            android:textColorLink="@color/dos"
            android:textCursorDrawable="@color/dos"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>